# Synth-piano-web

./: .gitignore  CLAUDE.md  README.md  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci-android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/scores/: frere_jacques.json  frere_jacques.mid  ode_to_joy.json  ode_to_joy.mid  scarborough_fair.json  scarborough_fair.mid  twinkle_twinkle.json  twinkle_twinkle.mid
app/src/main/cpp/: CMakeLists.txt  envelope.cpp  envelope.h  filter.cpp  filter.h  jni_bridge.cpp  oscillator.cpp  oscillator.h  synth_engine.cpp  synth_engine.h  voice.cpp  voice.h
app/src/main/java/io/github/ranzlappen/synthpiano/: MainActivity.kt  SynthApp.kt
app/src/main/java/io/github/ranzlappen/synthpiano/audio/: EnvelopeShape.kt  MidiScorePlayer.kt  NativeSynth.kt  RecordingExporter.kt  RecordingSession.kt  ScoreRecorder.kt  SynthController.kt  WavRecorder.kt  Waveform.kt
app/src/main/java/io/github/ranzlappen/synthpiano/crash/: CrashReporter.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  locales_config.xml  usb_midi_filter.xml
gradle/: libs.versions.toml
(+75 files in other folders)
